@@ -27,27 +27,21 @@ public class ReportTest {
         report.getListOfTotalFiles().stream().forEach( s -> {
             report.generateChart(s);
         });
-
-//        report.generateChart(10);
     }
 
     @Test
-    @Ignore
     public void getListMeasuresByTotalFiles() throws Exception {
         List<Measure> measureList = report.getListMeasuresByTotalFiles(1, 110);
-
-        Double[] expected = new Double[]{5.0,6.0,7.0,8.0,9.0};
 
         for (int i = 0; i < measureList.size(); i++) {
             assertEquals(110, measureList.get(i).getTotalFiles());
             assertEquals(i, measureList.get(i).getNbThreads());
-            assertEquals(expected[i], Double.valueOf(measureList.get(i).getElapsedTime(0)));
+            assertEquals(new Double(6.0), Double.valueOf(measureList.get(i).getElapsedTime(0)));
         }
     }
 
 
     @Test
-    @Ignore
     public void getListOfTotalFiles() throws Exception {
         List<Integer> expected = Arrays.asList(new Integer[]{10, 110, 210, 310, 410});
 
@@ -55,7 +49,6 @@ public class ReportTest {
     }
 
     @Test
-    @Ignore
     public void getListOfNbThreads() throws Exception {
         List<Integer> expected = Arrays.asList(new Integer[]{0, 1, 2, 3, 4});
 
@@ -63,9 +56,8 @@ public class ReportTest {
     }
 
     @Test
-    @Ignore
     public void getAverageSequential() throws Exception {
-        assertEquals(new Double(7), report.getAverageSequentialByStage(10, 0));
+        assertEquals(new Double(5.0E-9), report.getAverageSequentialByStage(10, 0));
     }
 
     private Map<String, List<Measure>> getDataSet(){
